syntax = "proto3";

package antelope.eosio.cpu.v1;

message Accounts {
    repeated Account items = 1;
}

message Account {
    // trace information
    string trx_id = 1;
    uint32 action_index = 2;

    // contract & scope
    string contract = 3;
    string symcode = 4;

    // data payload
    string account = 5;
    string balance = 6;
    int64 balance_delta = 7;

    // extras
    uint32 precision = 10;
    int64 amount = 11;
    double value = 12;
}

message Stats {
    repeated Stat items = 1;
}

message Stat {
    // trace information
    string trx_id = 1;
    uint32 action_index = 2;

    // contract & scope
    string contract = 3;
    string symcode = 4;

    // data payload
    string issuer = 5;
    string max_supply = 6;
    string supply = 7;
    int64 supply_delta = 8;

    // extras
    uint32 precision = 10;
    int64 amount = 11;
    double value = 12;
}

message TransferEvents {
    repeated TransferEvent items = 1;
}

message TransferEvent {
    // transaction
    string trx_id = 1;
    //uint32 action_ordinal = 2;

    // contract & scope
    string contract = 2;
    string action = 3;
    string symcode = 4;

    // data payload
    string from = 5;
    string to = 6;
    string quantity = 7;
    string memo = 8;

    // extras
    //uint32 precision = 10;
    //int64 amount = 11;
    //double value = 12;

    // bp and cpu data
    string producer = 9;
    uint32 cpu_usage = 10;
    uint32 net_usage = 11;
    uint32 tx_count = 12;
}
